<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connectify</string>
    <string name="action_settings">Settings</string>
    <string name="login_email_id">UTA Email ID</string>
    <string name="login_pwd">password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="go">go</string>
    <string name="try_me">try me</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_interest">AddInterestActivity</string>
    <string name="heading">What interests you?</string>
    <string name="title_activity_home">Map</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">About</string>
    <string name="title_section3">Interest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_security_questions">SecurityQuestions</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="not_connected">Not connected</string>
    <string name="add_geofences">Add geofence</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="interests">Interests</string>
    <string name="title_activity_user_profile">UserProfile</string>

    <string name="anime">Anime</string>
    <string name="big_data">Big Data</string>
    <string name="blogging">Blogging</string>
    <string name="cats">Cats</string>
    <string name="country_music">Country</string>
    <string name="cross_fit">Cross-fit</string>
    <string name="cricket">Cricket</string>
    <string name="dogs">Dogs</string>
    <string name="drones">Drones</string>
    <string name="got">GOT</string>
    <string name="hacking">Hacking</string>
    <string name="motocross">Motocross</string>
    <string name="paranormal">Paranormal</string>
    <string name="photography">Photography</string>
    <string name="seafood">Seafood</string>
    <string name="tex_mex">Tex-Mex</string>
    <string name="ui_design">UI Design</string>
    <string name="wine">Wine</string>
    <string name="yoga">Yoga</string>




</resources>
