<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.team5.uta.connectifyv1.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/main_linear_layout"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/lbl_sign_in"
            android:id="@+id/lbl_sign_in"

            android:gravity="center"
            android:inputType="none"
            android:textSize="20dp"
            android:layout_weight="0.08"
            android:layout_gravity="center"
            android:layout_marginTop="80dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login_email"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_email_id"
            android:gravity="center"
            android:inputType="text"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_password"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_pwd"
            android:gravity="center"
            android:layout_marginTop="10dp" />

        <Button
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:id="@+id/btn_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <requestFocus />
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_me"
            android:id="@+id/btn_register"
            android:layout_gravity="center_horizontal"
            android:layout_alignBaseline="@+id/forgot_pwd"
            android:layout_alignBottom="@+id/forgot_pwd"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/forgot_pwd"
            android:layout_gravity="center_horizontal"
            android:focusable="true"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/forgot_pwd"
            android:height="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="142dp" />

    </LinearLayout>

</RelativeLayout>
